<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pablo.gestionjugadores.AddEditActivity"
    android:background="#243A52">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txtEditNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditNombre"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNombre"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:text="@string/txtEditEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditEquipo"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtEquipo"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:text="@string/txtEditEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditEdad"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtEdad"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:text="@string/txtEditDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditDescripcion"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtDescripcion"
            android:inputType="textMultiLine"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:text="@string/txtEditPosicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEditPosicion"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listaPosiciones"
            android:layout_marginTop="10dp" />

        <ru.katso.livebutton.LiveButton
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/btnAddEdit"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="26sp"
            app:corners="4dp"
            app:normalHeight="6dp"
            app:pressedHeight="2dp"
            app:backgroundColor="#00c68c"
            app:shadowColor="#038B62"
            android:id="@+id/btnAddEdit"
            android:padding="8dp"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
