<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pablo.gestionjugadores.LoginActivity"
    android:background="#232530">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">
        
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:id="@+id/edtUsuario"
            android:hint="@string/edtUsuario"
            android:textColor="@android:color/white" />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"
            android:id="@+id/edtPassword"
            android:hint="@string/edtPassword"
            android:textColor="@android:color/white" />

        <CheckBox
            android:text="@string/chkRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkRemember"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/background_light" />

        <ru.katso.livebutton.LiveButton
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/btnLogin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="26sp"
            app:corners="4dp"
            app:normalHeight="6dp"
            app:pressedHeight="2dp"
            app:backgroundColor="#00c68c"
            app:shadowColor="#038B62"
            android:id="@+id/btnLogin"
            android:padding="8dp"
            android:layout_marginTop="24dp" />
    </LinearLayout>

</ScrollView>
